--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,13 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
+  "engines": {
+    "node": "16.x"
+  },
+  "description": "A really cool app.",
   "main": "index.js",
   "type": "module",
+  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start":"node index.js",
