--- a/server/client/package.json
+++ b/server/client/package.json
@@ -1,6 +1,10 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
+  "name": "client",
+  "version": "1.0.0",
+  "engines": {
+    "node": "16.x",
+    "npm": "8.13.1"
+  },
   "private": true,
   "dependencies": {
     "@emotion/react": "11.9.0",
