--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
     
     "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
-      "start":"node index.js",
+      "start":"node src/index.js",
       "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
     },
     "keywords": [],
